# NekoBot

./: .gitignore  COMPLETED_FEATURES.md  CONFIG_HOT_RELOAD_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  Readme.md  Releases.md  main.py  pyproject.toml  requirements.txt  verify_setup.py  配置热重载功能说明.md
LLM/: API-Doc.md  Dashboard.md  Project.md  Todo.md  agents.md
LLM/Docs/: LLM.md
NekoBot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: CONFIG_HOT_RELOAD.md  CONFIG_HOT_RELOAD_QUICKSTART.md
examples/: config_hot_reload_example.py
nekobot/: __init__.py  app.py
nekobot/api/: __init__.py  adapters.py  auth.py  llm.py  logs.py  mcp.py  plugins.py  prompts.py  system.py
nekobot/auth/: __init__.py  jwt_auth.py
nekobot/cli/: __init__.py  commands.py
nekobot/config/: hot_reload.py  manager.py
nekobot/core/: adapter_manager.py  auth.py  bot.py
nekobot/core/config/: __init__.py  config_manager.py
nekobot/core/db/: __init__.py  manager.py  models.py
nekobot/core/platform/: __init__.py  adapter_manager.py  base_adapter.py
nekobot/core/platform/sources/aiocqhttp/: aiocqhttp_platform_adapter.py
nekobot/core/platform/sources/napcat/: README.md  __init__.py  napcat_adapter.py  napcat_event.py  napcat_server.py
nekobot/core/platform/sources/slack/: slack_adapter.py
nekobot/core/platform/sources/wecom/: wecom_adapter.py
nekobot/database/: engine.py  models.py
nekobot/llm/: __init__.py  manager.py  provider.py
nekobot/plugin/: base.py  manager.py
nekobot/utils/: logger.py
nekobot/web/: __init__.py  app.py  websocket.py
nekobot/web/api/: __init__.py  auth.py  config.py  llm.py  platform.py  plugin.py  system.py
test/: verify_setup.py
